test phonegap fix

--- a/css/accordion.css
+++ b/css/accordion.css
@@ -1,3 +1,14 @@
+.bordo_verde>a{
+	border-color: #00802b !important;
+}
+.content {
+    bottom: 52px;
+}
+
+.ui-collapsible-heading{
+	margin: 1px;
+}
+
 .tab-item{
 	color: #929292 !important;
 }
